@@ -4,13 +4,12 @@ import java.io.PrintWriter;
 import java.util.Map;
 import java.util.Optional;
 import java.util.TreeMap;
+import java.util.logging.Level;
+import java.util.logging.Logger;
 import java.util.regex.Pattern;
 import java.util.stream.Stream;
 
 import javax.inject.Inject;
-
-import org.jboss.weld.environment.se.Weld;
-import org.jboss.weld.environment.se.WeldContainer;
 
 import logcheck.isp.IspList;
 import logcheck.isp.IspMap;
@@ -18,16 +17,17 @@ import logcheck.known.KnownList;
 import logcheck.log.AccessLog;
 import logcheck.mag.MagList;
 import logcheck.util.net.NetAddr;
+import logcheck.util.weld.WeldWrapper;
 
 /*
  * ISP > IPアドレス > メッセージ毎にログ数を集計する
  */
 public class Checker3 extends AbstractChecker<Map<String, IspMap<Map<String, Integer>>>> {
 
+	@Inject private Logger log;
+
 	@Inject private KnownList knownlist;
 	@Inject private MagList maglist;
-
-//	private Map<String, IspMap<Map<String, Integer>>> map = new TreeMap<>();
 
 	private static final Pattern[] FAIL_PATTERNS_ALL;
 	static {
@@ -36,10 +36,9 @@ public class Checker3 extends AbstractChecker<Map<String, IspMap<Map<String, Int
 		System.arraycopy(FAIL_PATTERNS_DUP, 0, FAIL_PATTERNS_ALL, FAIL_PATTERNS.length, FAIL_PATTERNS_DUP.length);
 	}
 
-	public Checker3 init(String knownfile, String magfile) throws Exception {
-		this.knownlist.load(knownfile);
-		this.maglist.load(magfile);
-		return this;
+	public void init(String...argv) throws Exception {
+		this.knownlist.load(argv[0]);
+		this.maglist.load(argv[1]);
 	}
 
 	@Override
@@ -52,7 +51,7 @@ public class Checker3 extends AbstractChecker<Map<String, IspMap<Map<String, Int
 					// ログのメッセージ部分はPatternの正規化表現で集約するため、対象ログが一致したPattern文字列を取得する
 					Optional<String> rc = Stream.of(FAIL_PATTERNS_ALL)
 							.filter(p -> p.matcher(b.getMsg()).matches())
-							.map(p -> p.toString())
+							.map(Pattern::toString)
 							.findFirst();
 					String m = rc.isPresent() ? rc.get() : b.getMsg();
 
@@ -77,13 +76,13 @@ public class Checker3 extends AbstractChecker<Map<String, IspMap<Map<String, Int
 
 						Integer count = client.get(m);
 						if (count == null) {
-							count = new Integer(0);
+							count = Integer.valueOf(0);
 						}
 						count += 1;
 						client.put(m, count);
 					}
 					else {
-						System.err.println("unknown ip: addr=" + addr);
+						log.log(Level.WARNING, "unknown ip: addr={0}", addr);
 					}
 				});
 		return map;
@@ -92,35 +91,21 @@ public class Checker3 extends AbstractChecker<Map<String, IspMap<Map<String, Int
 	@Override
 	public void report(final PrintWriter out, final Map<String, IspMap<Map<String, Integer>>> map) {
 		map.values().forEach(isp -> {
-			System.out.println();
-			System.out.println(isp.getName() + (isp.getCountry() == null ? "" : " (" + isp.getCountry() + ")") + " : ");
+			out.println();
+			out.println(isp.getName() + (isp.getCountry() == null ? "" : " (" + isp.getCountry() + ")") + " : ");
 			isp.keySet().forEach(addr -> {
 				Map<String, Integer> msgs = isp.get(addr);
-				System.out.println("\t" + addr + " : ");
-				msgs.keySet().forEach(msg -> {
-					System.out.println("\t\t[ " + msg + " ] : " + msgs.get(msg));
-				});
+				out.println("\t" + addr + " : ");
+				msgs.keySet().forEach(msg -> 
+					out.println("\t\t[ " + msg + " ] : " + msgs.get(msg))
+				);
 			});
 		});
-		System.out.println();
+		out.println();
 	}
 
 	public static void main(String ... argv) {
-		if (argv.length < 2) {
-			System.err.println("usage: java logcheck.Checker3 knownlist maglist [accesslog...]");
-			System.exit(1);
-		}
-
-		int rc = 0;
-		Weld weld = new Weld();
-		try (WeldContainer container = weld.initialize()) {
-			Checker3 application = container.instance().select(Checker3.class).get();
-			application.init(argv[0], argv[1]).start(argv, 2);
-		}
-		catch (Exception ex) {
-			ex.printStackTrace(System.err);
-			rc = 1;
-		}
+		int rc = new WeldWrapper<Checker3>(Checker3.class).weld(2, argv);
 		System.exit(rc);
 	}
 }
