@@ -4,29 +4,29 @@ import java.io.PrintWriter;
 import java.util.Map;
 import java.util.Optional;
 import java.util.TreeMap;
+import java.util.logging.Level;
+import java.util.logging.Logger;
 import java.util.regex.Pattern;
 import java.util.stream.Stream;
 
 import javax.inject.Inject;
-
-import org.jboss.weld.environment.se.Weld;
-import org.jboss.weld.environment.se.WeldContainer;
 
 import logcheck.isp.IspList;
 import logcheck.known.KnownList;
 import logcheck.log.AccessLog;
 import logcheck.mag.MagList;
 import logcheck.util.net.NetAddr;
+import logcheck.util.weld.WeldWrapper;
 
 /*
  * 国 > ISP > メッセージ > クライアントIP 毎にログ数を集計する
  */
 public class Checker6 extends AbstractChecker<Map<String, Map<IspList, Map<String, Map<NetAddr, Integer>>>>> {
 
+	@Inject private Logger log;
+
 	@Inject private KnownList knownlist;
 	@Inject private MagList maglist;
-
-//	private Map<String, Map<IspList, Map<String, Map<NetAddr, Integer>>>> map = new TreeMap<>();
 
 	private static final Pattern[] FAIL_PATTERNS_ALL;
 	static {
@@ -35,10 +35,9 @@ public class Checker6 extends AbstractChecker<Map<String, Map<IspList, Map<Strin
 		System.arraycopy(FAIL_PATTERNS_DUP, 0, FAIL_PATTERNS_ALL, FAIL_PATTERNS.length, FAIL_PATTERNS_DUP.length);
 	}
 
-	public Checker6 init(String knownfile, String magfile) throws Exception {
-		this.knownlist.load(knownfile);
-		this.maglist.load(magfile);
-		return this;
+	public void init(String...argv) throws Exception {
+		this.knownlist.load(argv[0]);
+		this.maglist.load(argv[1]);
 	}
 
 	@Override
@@ -51,7 +50,7 @@ public class Checker6 extends AbstractChecker<Map<String, Map<IspList, Map<Strin
 					// ログのメッセージ部分はPatternの正規化表現で集約するため、対象ログが一致したPattern文字列を取得する
 					Optional<String> rc = Stream.of(FAIL_PATTERNS_ALL)
 							.filter(p -> p.matcher(b.getMsg()).matches())
-							.map(p -> p.toString())
+							.map(Pattern::toString)
 							.findFirst();
 					String m = rc.isPresent() ? rc.get() : b.getMsg();
 					if (!rc.isPresent()) {
@@ -90,12 +89,13 @@ public class Checker6 extends AbstractChecker<Map<String, Map<IspList, Map<Strin
 
 						count = addrmap.get(addr);
 						if (count == null) {
-							count = new Integer(0);
+							count = Integer.valueOf(0);
 						}
 						count += 1;
 						addrmap.put(addr, count);
-					} else {
-						System.err.println("unknown ip: addr=" + addr);
+					}
+					else {
+						log.log(Level.WARNING, "unknown ip: addr={0}", addr);
 					}
 				});
 		return map;
@@ -103,55 +103,41 @@ public class Checker6 extends AbstractChecker<Map<String, Map<IspList, Map<Strin
 
 	@Override
 	public void report(final PrintWriter out, final Map<String, Map<IspList, Map<String, Map<NetAddr, Integer>>>> map) {
-		System.out.println();
+		out.println();
 		map.forEach((country, ispmap) -> {
-			int sum = ispmap.values().stream().mapToInt(msgmap -> {
-				return msgmap.values().stream().mapToInt(addrmap -> {
-					return addrmap.values().stream().mapToInt(c -> c.intValue()).sum();
-				}).sum();
-			}).sum();
-			int sum1 = ispmap.values().stream().mapToInt(msgmap -> {
-				return msgmap.get(INFO_SUMMARY_MSG) == null ? 0 : msgmap.get(INFO_SUMMARY_MSG).values().stream().mapToInt(c -> c.intValue()).sum();
-			}).sum();
-			System.out.println(("".equals(country) ? "<MAGLIST>" : country) +
+			int sum = ispmap.values().stream().mapToInt(msgmap -> 
+				msgmap.values().stream().mapToInt(addrmap -> 
+					addrmap.values().stream().mapToInt(Integer::intValue).sum()
+				).sum()
+			).sum();
+			int sum1 = ispmap.values().stream().mapToInt(msgmap -> 
+				msgmap.get(INFO_SUMMARY_MSG) == null ? 0 : msgmap.get(INFO_SUMMARY_MSG).values().stream().mapToInt(Integer::intValue).sum()
+			).sum();
+			out.println(("".equals(country) ? "<MAGLIST>" : country) +
 				new StringBuilder().append(" : ").append(sum - sum1).append(" / ").append(sum).append(" => ").append((sum - sum1) * 100 / sum).append("%").toString());
 
 			ispmap.forEach((isp, msgmap) -> {
-				int sum2 = msgmap.values().stream().mapToInt(addrmap -> {
-					return addrmap.values().stream().mapToInt(c -> c.intValue()).sum();
-				}).sum();
-				int sum21 = msgmap.get(INFO_SUMMARY_MSG) == null ? 0 : msgmap.get(INFO_SUMMARY_MSG).values().stream().mapToInt(c -> c.intValue()).sum();
-				System.out.println(new StringBuilder().append("\t").append(isp.getName()).append(" : ").append(sum2 - sum21).append(" / ").append(sum2).append(" => ").append((sum2 - sum21) * 100 / sum2).append("%"));
+				int sum2 = msgmap.values().stream().mapToInt(addrmap -> 
+					addrmap.values().stream().mapToInt(Integer::intValue).sum()
+				).sum();
+				int sum21 = msgmap.get(INFO_SUMMARY_MSG) == null ? 0 : msgmap.get(INFO_SUMMARY_MSG).values().stream().mapToInt(Integer::intValue).sum();
+				out.println(new StringBuilder().append("\t").append(isp.getName()).append(" : ").append(sum2 - sum21).append(" / ").append(sum2).append(" => ").append((sum2 - sum21) * 100 / sum2).append("%"));
 
 				msgmap.forEach((msg, addrmap) -> {
-					int sum3 = addrmap.values().stream().mapToInt(c -> c.intValue()).sum();
-					System.out.println(new StringBuilder().append("\t\t[ ").append(msg).append(" ] : ").append(sum3));
+					int sum3 = addrmap.values().stream().mapToInt(Integer::intValue).sum();
+					out.println(new StringBuilder().append("\t\t[ ").append(msg).append(" ] : ").append(sum3));
 
-					addrmap.forEach((addr, count) -> {
-						System.out.println(new StringBuilder().append("\t\t\t").append(addr).append(" : ").append(count));
-					});
+					addrmap.forEach((addr, count) -> 
+						out.println(new StringBuilder().append("\t\t\t").append(addr).append(" : ").append(count))
+					);
 				});
 			});
 		});
-		System.out.println();
+		out.println();
 	}
 
 	public static void main(String... argv) {
-		if (argv.length < 2) {
-			System.err.println("usage: java logcheck.Checker4 knownlist maglist [accesslog...]");
-			System.exit(1);
-		}
-
-		int rc = 0;
-		Weld weld = new Weld();
-		try (WeldContainer container = weld.initialize()) {
-			Checker6 application = container.instance().select(Checker6.class).get();
-			application.init(argv[0], argv[1]).start(argv, 2);
-		}
-		catch (Exception ex) {
-			ex.printStackTrace(System.err);
-			rc = 1;
-		}
+		int rc = new WeldWrapper<Checker6>(Checker6.class).weld(2, argv);
 		System.exit(rc);
 	}
 }
