@@ -4,13 +4,12 @@ import java.io.PrintWriter;
 import java.util.Map;
 import java.util.Optional;
 import java.util.TreeMap;
+import java.util.logging.Level;
+import java.util.logging.Logger;
 import java.util.regex.Pattern;
 import java.util.stream.Stream;
 
 import javax.inject.Inject;
-
-import org.jboss.weld.environment.se.Weld;
-import org.jboss.weld.environment.se.WeldContainer;
 
 import logcheck.isp.IspList;
 import logcheck.known.KnownList;
@@ -18,6 +17,7 @@ import logcheck.log.AccessLog;
 import logcheck.log.AccessLogSummary;
 import logcheck.mag.MagList;
 import logcheck.util.net.NetAddr;
+import logcheck.util.weld.WeldWrapper;
 
 /*
  * 国 > ISP > クライアントIP > メッセージ 毎にログ数を集計する
@@ -25,10 +25,10 @@ import logcheck.util.net.NetAddr;
  */
 public class Checker7 extends AbstractChecker<Map<String, Map<IspList, Map<NetAddr, Map<AccessLogSummary, Integer>>>>> {
 
+	@Inject private Logger log;
+
 	@Inject private KnownList knownlist;
 	@Inject private MagList maglist;
-
-//	private Map<String, Map<IspList, Map<NetAddr, Map<AccessLogSummary, Integer>>>> map = new TreeMap<>();
 
 	private static final Pattern[] FAIL_PATTERNS_ALL;
 	static {
@@ -37,10 +37,9 @@ public class Checker7 extends AbstractChecker<Map<String, Map<IspList, Map<NetAd
 		System.arraycopy(FAIL_PATTERNS_DUP, 0, FAIL_PATTERNS_ALL, FAIL_PATTERNS.length, FAIL_PATTERNS_DUP.length);
 	}
 
-	public Checker7 init(String knownfile, String magfile) throws Exception {
-		this.knownlist.load(knownfile);
-		this.maglist.load(magfile);
-		return this;
+	public void init(String...argv) throws Exception {
+		this.knownlist.load(argv[0]);
+		this.maglist.load(argv[1]);
 	}
 
 	@Override
@@ -54,7 +53,7 @@ public class Checker7 extends AbstractChecker<Map<String, Map<IspList, Map<NetAd
 					// ログのメッセージ部分はPatternの正規化表現で集約するため、対象ログが一致したPattern文字列を取得する
 					Optional<String> rc = Stream.of(FAIL_PATTERNS_ALL)
 							.filter(p -> p.matcher(b.getMsg()).matches())
-							.map(p -> p.toString())
+							.map(Pattern::toString)
 							.findFirst();
 					String pattern = rc.isPresent() ? rc.get() : b.getMsg();
 					if (!rc.isPresent()) {
@@ -94,15 +93,16 @@ public class Checker7 extends AbstractChecker<Map<String, Map<IspList, Map<NetAd
 						AccessLogSummary msg = new AccessLogSummary(b, pattern);
 						count = msgmap.get(msg);
 						if (count == null) {
-							count = new Integer(0);
+							count = Integer.valueOf(0);
 						}
 						else {
 							msg.update(b);
 						}
 						count += 1;
 						msgmap.put(msg, count);
-					} else {
-						System.err.println("unknown ip: addr=" + addr);
+					} 
+					else {
+						log.log(Level.WARNING, "unknown ip: addr={0}", addr);
 					}
 				});
 		return map;
@@ -112,18 +112,18 @@ public class Checker7 extends AbstractChecker<Map<String, Map<IspList, Map<NetAd
 	public void report(final PrintWriter out, 
 			final Map<String, Map<IspList, Map<NetAddr, Map<AccessLogSummary, Integer>>>> map)
 	{
-		System.out.println("国\tISP/プロジェクト\tアドレス\tメッセージ\t初回日時\t最終日時\tログ数\tISP合計");
-		map.forEach((country, ispmap) -> {
+		out.println("国\tISP/プロジェクト\tアドレス\tメッセージ\t初回日時\t最終日時\tログ数\tISP合計");
+		map.forEach((country, ispmap) -> 
 
 			ispmap.forEach((isp, addrmap) -> {
-				int sumIspLog = addrmap.values().stream().mapToInt(msgmap -> {
-					return msgmap.values().stream().mapToInt(c -> c.intValue()).sum();
-				}).sum();
+				int sumIspLog = addrmap.values().stream().mapToInt(msgmap -> 
+					msgmap.values().stream().mapToInt(Integer::intValue).sum()
+				).sum();
 
-				addrmap.forEach((addr, msgmap) -> {
+				addrmap.forEach((addr, msgmap) -> 
 
-					msgmap.forEach((msg, count) -> {
-						System.out.println(new StringBuilder("".equals(country) ? "<MAGLIST>" : country)
+					msgmap.forEach((msg, count) -> 
+						out.println(new StringBuilder("".equals(country) ? "<MAGLIST>" : country)
 								.append("\t").append(isp.getName())
 								.append("\t").append(addr)
 								.append("\t").append(msg.getPattern())
@@ -131,29 +131,15 @@ public class Checker7 extends AbstractChecker<Map<String, Map<IspList, Map<NetAd
 								.append("\t").append(msg.getLastDate())
 								.append("\t").append(count)
 								.append("\t").append(sumIspLog)
-								);
-					});
-				});
-			});
-		});
+								)
+						)
+				);
+			})
+		);
 	}
 
 	public static void main(String... argv) {
-		if (argv.length < 2) {
-			System.err.println("usage: java logcheck.Checker4 knownlist maglist [accesslog...]");
-			System.exit(1);
-		}
-
-		int rc = 0;
-		Weld weld = new Weld();
-		try (WeldContainer container = weld.initialize()) {
-			Checker7 application = container.instance().select(Checker7.class).get();
-			application.init(argv[0], argv[1]).start(argv, 2);
-		}
-		catch (Exception ex) {
-			ex.printStackTrace(System.err);
-			rc = 1;
-		}
+		int rc = new WeldWrapper<Checker7>(Checker7.class).weld(2, argv);
 		System.exit(rc);
 	}
 }
